--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
 
-  "name": "Our Awesome Extension",
-  "description": "It will do something",
+  "name": "Highlighter",
+  "description": "Highlights multiple words",
   "version": "1.0",
 
   "browser_action": {
@@ -11,5 +11,13 @@
   },
   "permissions": [
    "activeTab"
-   ]
+   ],
+   "content_scripts": [
+    {
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": ["background.js"]
+    }
+  ]
 }
