--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
       "matches": [
         "<all_urls>"
       ],
-      "js": ["content.js"]
+      "js": ["jquery-3.2.1.min.js", "content.js"]
     }
   ],
 
